# betterinfo-wrapper

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: BIUpdateManager.h  main.cpp  paths.h
